# logger.c

./: .clang-format  CMakeLists.txt  README.md
include/: logger.h
src/: logger.c
tests/: test_logger.c
